# rtos-lvgl

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lvgl_simple_demo.c  package-lock.json  package.json
apps/complex/: main.c
apps/demo/: dashboard.c  dashboard.h  main.c
apps/stm32/: main.c
docs/: learning_guide.md  lvgl_widgets_demo_guide.md  readme.txt  session_summary.md
docs/superpowers/plans/: 2026-05-31-rtos-platform-lvgl-plan.md  2026-06-13-stm32f103-lvgl-port-plan.md
docs/superpowers/specs/: 2026-05-31-rtos-platform-lvgl-design.md  2026-06-13-stm32f103-lvgl-port-design.md
lvgl_port/: lvgl_port.c  lvgl_port.h
platform/alios/: rtos_mem.c  rtos_task.c
platform/freertos/: rtos_task.c
platform/include/: rtos_mem.h  rtos_sync.h  rtos_task.h  rtos_time.h  rtos_types.h
platform/liteos/: rtos_time.c
platform/posix/: rtos_scheduler.c  rtos_scheduler.h  rtos_sync.c  rtos_task.c
platform/rtthread/: rtos_task.c
platform/stm32f103/: STM32F103ZETX_FLASH.ld  bsp.c  bsp.h  keypad.c  keypad.h  lcd.c  lcd.h  lvgl_port.c  lvgl_port.h  rtos_mem.c  rtos_sync.c  rtos_task.c  rtos_time.c  startup.s  stm32f1xx.h  touch.c  touch.h  usart.c  usart.h
platform/threadx/: rtos_task.c
